--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ dependencies:
   flutter:
     sdk: flutter
   
-  provider: ^6.0.2   
+  # provider: ^6.0.2  
+  flutter_bloc: ^5.0.0 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.0
+  intl: ^0.16.1
 
 
 dev_dependencies:
